fixed alignment of avatar

--- a/app/views/styles/main.css
+++ b/app/views/styles/main.css
@@ -31,14 +31,13 @@ a:link, a:visited, a:hover, a:focus {
 }
 .stream-item-body {
   padding-left: 8px;
-  padding-right: 8px;  
+  padding-right: 8px; 
 }
 .stream-item-body img {
   height: 25px;
   width: 25px; 
-  border-radius: 50%;
-  margin-top: 7px;
-  margin-right: 7px;
+  border-radius: 50%; 
+  margin-right: 8px;
 }
 .fish-photo {
   width: 600px;
